Started work on page 2

--- a/HB2.html
+++ b/HB2.html
@@ -5,17 +5,54 @@
     <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HB</title>
         <link rel="stylesheet" href="HB.css">
-        
+        <link rel="stylesheet" href="sunflower.css">
     </head>
     <body>
+        <div id="flower">
+          <div id="sunflower">
+            <div class="petals"></div>
+            <div class="petals"></div>
+            <div class="petals"></div>
+            <div class="petals"></div>
+            <div class="petals"></div>
+            <div class="petals"></div>
+            <div class="petals"></div>
+            <div class="petals"></div>
+
+            <div class="center"></div>
+
+          </div>
+          <div id="backpetal">
+
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+            <div class="petalsb"></div>
+
+          </div>
+        </div>
         <div class="glass">
             <div>
-                <p></p>
+                <p id="disp" class="p1t1" ></p>
+                <br><span id="countdown" class="p1t1"></span>
                 <div class="bttn">
                 <button onclick=history.back()>Back</button>
-                <button onclick=Next1()>Next</button>
+                <button onclick=Next1() id="next1">Next</button>
                 </div>
             </div>
         </div>
+        <ul class='circles'>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+         </ul>
+         <div class="watermark">By Partha,<br>for Tani</div>
     </body>
 </html>
