--- a/HB2.html
+++ b/HB2.html
@@ -41,7 +41,7 @@
                 <p id="disp2" class="t2" > </p>
                 <br>
                 <div class="bttn">
-                <button onclick=history.back() onclick=setTimeout(function(){window.location.reload()},500)>Back</button>
+                <button onclick=back()>Back</button>
                 <button onclick=Next1() id="next1">Next</button>
                 </div>
             </div>
