--- a/HB.html
+++ b/HB.html
@@ -3,6 +3,9 @@
     <script src="HB.js"></script>
 </script>
     <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
         <title>HB</title>
         <link rel="stylesheet" href="HB.css">
         <link rel="stylesheet" href="sunflower.css">
