--- a/HB.html
+++ b/HB.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <script src="HB.js"></script>
-</script>
     <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HB</title>
         <link rel="stylesheet" href="HB.css">
         <link rel="stylesheet" href="sunflower.css">
         <link rel="stylesheet" href="particle.css">
     </head>
+    <script src="HB.js"></script></script>
     <body>
         <div id="flower">
           <div id="sunflower">
