Added Main Wish and changed some animations

--- a/HB2.html
+++ b/HB2.html
@@ -10,6 +10,12 @@
     <script src="HB.js"></script></script>
     <body onload=onLoad()>
         <img class="image1" src="img.jpg">
+        <div class="WishPart" hidden>
+          <div>
+          Happy <br> Birthday 
+          </div>
+
+        </div>
         <div id="flower">
           <div id="sunflower">
             <div class="petals"></div>
