Finished Basic structure

--- a/HB2.html
+++ b/HB2.html
@@ -10,10 +10,15 @@
     <script src="HB.js"></script></script>
     <body onload=onLoad()>
         <img class="image1" src="img.jpg">
-        <div class="WishPart" hidden>
-          <div>
-          Happy <br> Birthday 
-          </div>
+        <div class="WishPart">
+            <div class="MainWish">
+               Happy 
+            <br>
+              Birthday 
+            </div>
+            <p class="caption">May all of your dreams come true</p>
+            <button id="next3">Next</button>
+        </div>
 
         </div>
         <div id="flower">
