Everything except backend and final animation done

--- a/HB.html
+++ b/HB.html
@@ -53,6 +53,6 @@
             <li></li>
             <li></li>
          </ul>
-         <div class="watermark">By Partha,<br>for ..</div>
+         <div class="watermark">By Partha,<br>for Tani</div>
     </body>
 </html>
