--- a/HB2.html
+++ b/HB2.html
@@ -9,15 +9,15 @@
     </head>
     <script src="HB.js"></script></script>
     <body onload=onLoad()>
-        <img class="image1" src="img.jpg">
+        <img class="image1" src="ig.jpg">
         <div class="WishPart">
             <div class="MainWish">
-               Happy 
-            <br>
-              Birthday 
+               Happy <br>
+              Birthday <div class="Tani">Tanishtha</div>
             </div>
-            <p class="caption">May all of your dreams come true</p>
-            <button id="next3">Next</button>
+            
+            <p class="caption">❤️  May all of your dreams come true  ❤️</p>
+            <button onclick=Next3() id="next3">Next</button>
         </div>
 
         </div>
@@ -66,6 +66,6 @@
             <li></li>
             <li></li>
          </ul>
-         <div class="watermark">By Partha,<br>for ..</div>
+         <div class="watermark">By Partha,<br>for Tani</div>
     </body>
 </html>
