--- a/HB2.html
+++ b/HB2.html
@@ -12,7 +12,7 @@
     </head>
     <script src="HB.js"></script></script>
     <body onload=onLoad()>
-        <img class="image1" src="ig.jpg">
+        <img class="image1" src="img.jpg">
         <div class="WishPart">
             <div class="MainWish">
                Happy <br>
