--- a/HB3.html
+++ b/HB3.html
@@ -19,7 +19,7 @@
                      <br> Enter whatever you want to eat . <br> [ Na bolbina ekdom 🙂 ]</p>
                     </div>
                     <div class="treatbox" >
-                         <input type="text" placeholder="Food Items">
+                         <input type="text" placeholder="Food Items" id="Food">
                     </div>
                  <div class="homenext">
                    <button onclick=submit() id="submit">Send</button>
